--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div>padang ganteng</div>
-    padang
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto adipisci eius officia repellat animi reprehenderit, accusamus dolore laudantium quidem maiores rerum, odio dicta iure magnam ratione, corporis similique? Porro fugiat rerum veritatis veniam. Mollitia non similique maiores corrupti enim! Culpa cum hic enim iste molestiae veniam, placeat, quisquam quaerat aperiam quos similique autem perferendis atque ullam inventore aliquam corporis tenetur dolore repellat exercitationem itaque expedita! Dolores at soluta et aspernatur praesentium repellendus nemo similique deserunt ipsam corporis incidunt perspiciatis porro dolorem non eaque, molestiae dolore. Harum aliquam vitae libero excepturi voluptas porro suscipit. Totam et, saepe corrupti reprehenderit veritatis voluptates!</p>
 </body>
 </html>
