--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padang</title>
-</head>
-<body>
-    <div>padang ganteng</div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto adipisci eius officia repellat animi reprehenderit, accusamus dolore laudantium quidem maiores rerum, odio dicta iure magnam ratione, corporis similique? Porro fugiat rerum veritatis veniam. Mollitia non similique maiores corrupti enim! Culpa cum hic enim iste molestiae veniam, placeat, quisquam quaerat aperiam quos similique autem perferendis atque ullam inventore aliquam corporis tenetur dolore repellat exercitationem itaque expedita! Dolores at soluta et aspernatur praesentium repellendus nemo similique deserunt ipsam corporis incidunt perspiciatis porro dolorem non eaque, molestiae dolore. Harum aliquam vitae libero excepturi voluptas porro suscipit. Totam et, saepe corrupti reprehenderit veritatis voluptates!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet">
+
+    <!-- Feather Icons -->
+    <script src="https://unpkg.com/feather-icons"></script>
+
+    <!-- My Style -->
+    <title>Rafqi Motor</title>
+  </head>
+  <body>
+    <!-- Navbar start -->
+    <nav class="navbar">
+      <a href="#" class="navbar-logo"><span>Rafqi</span>Motor</a>
+
+      <div class="navbar-nav">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#visi">Visi-misi</a>
+        <a href="#layanan">Layanan</a>
+        <a href="#kontak">Kontak</a>
+      </div>
+
+      <div class="navbar-extra">
+        <a href="#" id="search"> <i data-feather="search"></i></a>
+        <a href="#" id="shopping-cart"> <i data-feather="shopping-cart"></i></a>
+        <a href="#" id="hamburger-menu"> <i data-feather="menu"></i></a>
+      </div>
+    </nav>
+    <!-- Navbar end -->
+
+    <!-- Hero Section start -->
+    <section class="hero" id="home">
+        <main class="content">
+            <h1><span>Dokter</span> motor & sparepart kendaraan anda</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cumque.</p>
+            <a href="#" class="cta">Order Sekarang</a>
+        </main>
+    </section>
+    <!-- Hero Section end -->
+
+
+    <!-- Feather Icons -->
+    <script>
+      feather.replace();
+    </script>
+
+    <!-- My Javascript -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
