--- a/index.html
+++ b/index.html
@@ -40,12 +40,31 @@
     <!-- Hero Section start -->
     <section class="hero" id="home">
         <main class="content">
-            <h1><span>Dokter</span> motor & sparepart kendaraan anda</h1>
+            <h1><span>Bengkel</span> motor & sparepart kendaraan anda</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cumque.</p>
             <a href="#" class="cta">Order Sekarang</a>
         </main>
     </section>
     <!-- Hero Section end -->
+
+    <!-- About Section Start -->
+    <section class="about" id="about">
+        <h2><span>Tentang</span>Kami</h2>
+
+        <div class="row">
+            <div class="about-img">
+                <img src="img/tentang-kami.png" alt="Tentang Kami">
+            </div>
+            <div class="content">
+                <h3>Kenapa memilih bengkel kami</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et neque deleniti, optio tenetur assumenda.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque magni eius natus qui molestias pariatur velit cumque et accusamus corporis.</p>
+            </div>
+        </div>
+    </section>
+    <!-- About Section end -->
+
+
 
 
     <!-- Feather Icons -->
