--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style/style.css" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet" />
 
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -24,9 +24,9 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
+        <a href="#menu">Layanan</a>
         <a href="#visi">Visi-misi</a>
-        <a href="#layanan">Layanan</a>
-        <a href="#kontak">Kontak</a>
+        <a href="#contact">Kontak</a>
       </div>
 
       <div class="navbar-extra">
@@ -39,33 +39,76 @@
 
     <!-- Hero Section start -->
     <section class="hero" id="home">
-        <main class="content">
-            <h1><span>Bengkel</span> motor & sparepart kendaraan anda</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cumque.</p>
-            <a href="#" class="cta">Order Sekarang</a>
-        </main>
+      <main class="content">
+        <h1><span>Bengkel</span> motor & sparepart kendaraan anda</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cumque.</p>
+        <a href="#" class="cta">Order Sekarang</a>
+      </main>
     </section>
     <!-- Hero Section end -->
 
     <!-- About Section Start -->
     <section class="about" id="about">
-        <h2><span>Tentang</span>Kami</h2>
+      <h2><span>Tentang</span> Kami</h2>
 
-        <div class="row">
-            <div class="about-img">
-                <img src="img/tentang-kami.png" alt="Tentang Kami">
-            </div>
-            <div class="content">
-                <h3>Kenapa memilih bengkel kami</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et neque deleniti, optio tenetur assumenda.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque magni eius natus qui molestias pariatur velit cumque et accusamus corporis.</p>
-            </div>
+      <div class="row">
+        <div class="about-img">
+          <img src="img/tentang-kami.png" alt="Tentang Kami" />
         </div>
+        <div class="content">
+          <h3>Kenapa memilih bengkel kami</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et neque deleniti, optio tenetur assumenda.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque magni eius natus qui molestias pariatur velit cumque et accusamus corporis.</p>
+        </div>
+      </div>
     </section>
     <!-- About Section end -->
 
+    <!-- Menu Section start -->
+    <section id="menu" class="menu">
+      <h2><span>Layanan</span> Kami</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius vero error veniam minus, enim a.</p>
 
+      <div class="row">
+        <div class="menu-card">
+          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Oli -</h3>
+          <p class="menu-card-price">>IDR 40K<</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Oli -</h3>
+          <p class="menu-card-price">>IDR 40K<</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Oli -</h3>
+          <p class="menu-card-price">>IDR 40K<</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Oli -</h3>
+          <p class="menu-card-price">>IDR 40K<</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Oli -</h3>
+          <p class="menu-card-price">>IDR 40K<</p>
+        </div>
+      </div>
+    </section>
+    <!-- Menu Section end -->
 
+    <!-- contact section start -->
+    <section id="contact" class="contact">
+      <h2><span>Kontak</span> Kami</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, eligendi!</p>
+
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7702321253023!2d100.38433877397648!3d-0.28130719971592494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd547717a923d97%3A0x6e4fa802f059e06f!2sRafqi%20Motor!5e0!3m2!1sid!2sid!4v1703976979853!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+        </div>
+    </section>
+    <!-- contact section end -->
 
     <!-- Feather Icons -->
     <script>
