--- a/index.html
+++ b/index.html
@@ -106,10 +106,49 @@
 
         <div class="row">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7702321253023!2d100.38433877397648!3d-0.28130719971592494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd547717a923d97%3A0x6e4fa802f059e06f!2sRafqi%20Motor!5e0!3m2!1sid!2sid!4v1703976979853!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+            <form action="">
+                <div class="input-group">
+                    <i data-feather="user"></i>
+                    <input type="text" placeholder="nama">
+                </div>
+                <div class="input-group">
+                    <i data-feather="mail"></i>
+                    <input type="text" placeholder="email">
+                </div>
+                <div class="input-group">
+                    <i data-feather="phone"></i>
+                    <input type="text" placeholder="no hp">
+                </div>
+                <button type="submit" class="btn">Kirim Pesan</button>
+            </form>
         </div>
     </section>
     <!-- contact section end -->
 
+    <!-- Footer start -->
+    <footer>
+        <div class="socials">
+            <a href="#"><i data-feather="instagram"></i></a>
+            <a href="#"><i data-feather="twitter"></i></a>
+            <a href="#"><i data-feather="facebook"></i></a>
+        </div>
+
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#about">Tentang Kami</a>
+            <a href="#menu">Layanan</a>
+            <a href="#visi">Visi-Misi</a>
+            <a href="#contact">Kontak</a>
+        </div>
+
+        <div class="credit">
+            <p>Created by <a href="">RiandaRafqi</a> | &copy; 2024</p>
+        </div>
+    </footer>
+    <!-- Footer end -->
+
+    
     <!-- Feather Icons -->
     <script>
       feather.replace();
