--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
-        <a href="#menu">Layanan</a>
         <a href="#visi">Visi-misi</a>
+        <a href="#menu">Layanan</a>
         <a href="#contact">Kontak</a>
       </div>
 
@@ -64,6 +64,23 @@
     </section>
     <!-- About Section end -->
 
+    <!-- About Section Start -->
+    <section class="visi" id="visi">
+      <h2><span>Visi</span> Misi</h2>
+
+      <div class="row">
+        <div class="content">
+          <p>1. Menjadi Bengkel Digital Yang Terdepan</p>
+          <p>2. Memiliki Saluran Distribusi Terbaik Di Indonesia.</p>
+          <p>3. Memiliki Saluran Distribusi Terbaik Di Indonesia.</p>
+          <p>4. Menyediakan Service Terbaik Untuk Konsumen.</p>
+          <p>5. Memberikan Kepuasan Pelanggan Dalam Industri Otomotif.</p>
+          <p>6. Membangun budaya Kolaboratif, Apresiasi Dan Inovasi Di Lingkungan Kerja.</p>
+        </div>
+      </div>
+    </section>
+    <!-- About Section end -->
+    
     <!-- Menu Section start -->
     <section id="menu" class="menu">
       <h2><span>Layanan</span> Kami</h2>
@@ -73,27 +90,27 @@
         <div class="menu-card">
           <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
           <h3 class="menu-card-title">- Ganti Oli -</h3>
-          <p class="menu-card-price">>IDR 40K<</p>
+          <p class="menu-card-price">> IDR 40K <</p>
         </div>
         <div class="menu-card">
-          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
-          <h3 class="menu-card-title">- Ganti Oli -</h3>
-          <p class="menu-card-price">>IDR 40K<</p>
+          <img src="img/servis.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Service Motor -</h3>
+          <p class="menu-card-price">> IDR 100K <</p>
         </div>
         <div class="menu-card">
-          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
-          <h3 class="menu-card-title">- Ganti Oli -</h3>
-          <p class="menu-card-price">>IDR 40K<</p>
+          <img src="img/busi.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Busi -</h3>
+          <p class="menu-card-price">> IDR 50K <</p>
         </div>
         <div class="menu-card">
-          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
-          <h3 class="menu-card-title">- Ganti Oli -</h3>
-          <p class="menu-card-price">>IDR 40K<</p>
+          <img src="img/cat.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Cat Motor -</h3>
+          <p class="menu-card-price">> IDR 200K <</p>
         </div>
         <div class="menu-card">
-          <img src="img/oli.png" alt="Ganti oli" class="menu-card-img" />
-          <h3 class="menu-card-title">- Ganti Oli -</h3>
-          <p class="menu-card-price">>IDR 40K<</p>
+          <img src="img/ban.png" alt="Ganti oli" class="menu-card-img" />
+          <h3 class="menu-card-title">- Ganti Ban -</h3>
+          <p class="menu-card-price">> IDR 300K <</p>
         </div>
       </div>
     </section>
