--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="hero" id="home">
       <main class="content">
         <h1><span>Bengkel</span> motor & sparepart kendaraan anda</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cumque.</p>
+        <p>Bengkel Hemat dan Baik</p>
         <a href="#" class="cta">Order Sekarang</a>
       </main>
     </section>
@@ -57,8 +57,11 @@
         </div>
         <div class="content">
           <h3>Kenapa memilih bengkel kami</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et neque deleniti, optio tenetur assumenda.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque magni eius natus qui molestias pariatur velit cumque et accusamus corporis.</p>
+          <p>Rafqi Motor merupakan transformasi dari Speed Tyre Shop yang berdiri tahun 2011. Berfokus melayani penjualan barang dan jasa seputar Ban, Oli, Service untuk segala jenis motor.</p>
+          <p>Rafqi Motor terus berkembang dan bertumbuh dalam industri otomotif dan saat ini sudah memiliki 1 Outlet bengkel. Outlet kami berada di Kota Bukittinggi.
+          </p>
+          <p>Dengan pengalaman yang sudah bertahun-tahun, kami siap memberikan pelayanan yang lebih lengkap dan menyeluruh dengan berbagai keunggulan baru bagi setiap pelanggan. 
+          </p>
         </div>
       </div>
     </section>
@@ -84,7 +87,7 @@
     <!-- Menu Section start -->
     <section id="menu" class="menu">
       <h2><span>Layanan</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius vero error veniam minus, enim a.</p>
+      <p>Kami menyediakan berbagai jenis service diantaranya Ganti Oli, Service Motor, Ganti Busi, Cat Motor dan Ganti Ban.</p>
 
       <div class="row">
         <div class="menu-card">
@@ -119,7 +122,7 @@
     <!-- contact section start -->
     <section id="contact" class="contact">
       <h2><span>Kontak</span> Kami</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, eligendi!</p>
+      <p>Informasi Kontak Layanan Pengaduan Konsumen</p>
 
         <div class="row">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7702321253023!2d100.38433877397648!3d-0.28130719971592494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd547717a923d97%3A0x6e4fa802f059e06f!2sRafqi%20Motor!5e0!3m2!1sid!2sid!4v1703976979853!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
